@@ -1,4 +1,11 @@
 2006-12-28  Brandon Hale  <brandon@ubuntu.com>
+
+	* src/InfoWindow.cs, src/MagicCoverImage.cs:
+	Fix crasher in InfoWindow when Song.Image is null.
+	As a side effect, only load unknown-cover.png once, fixing
+	a potential leak. Thanks to TJ Fontaine <tjfontaine@gmail.com>.
+
+2006-12-28  Brandon Hale  <brandon@ubuntu.com>
 	
 	* src/TagDialog.cs, src/PlayerWindow.cs, src/FindStation.cs:
 	Apply patch from Łukasz Jernaś to fix remaining l10n issues.
